added background to hero section

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,11 +39,9 @@
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
   }
-}
 
-
-
-body {
-  color: #fff;
- 
+  .hero-section {
+    height: 100vh;
+    width: 100vw;
+  }
 }
