added new work to projects and navbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,6 +38,12 @@
   width: 100vw;
 }
 
+.container {
+  max-width: 1440px; /* Set a maximum width for the container */
+  margin-left: auto; /* Automatically adjust left margin */
+  margin-right: auto; /* Automatically adjust right margin */
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     --foreground-rgb: 255, 255, 255;
